add function to update forge automatically